load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "decode",
    srcs = [
        "compound.rs",
        "lib.rs",
        "scalar.rs",
    ],
    visibility = ["//runtime:__subpackages__"],
    deps = [
        "//runtime:metadata-prost",
        "//runtime:names",
        "@crates//:anyhow",
        "@crates//:prost",
        "@crates//:tonic",
        "@crates//:wasmtime",
    ],
)
